# qdrant2

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  README.md  main.py  pyproject.toml  qdrant2.code-workspace  qdrant_universal.py  test_config_sync.py  test_qdrant_list_collections.py  test_qdrant_live.py
.PLAN/: BACKLOG.md
.agent/custom_mcp/: qdrant_universal.py
.agent/rules/: 0. instrukcja_systemowa.md  ANTI_DEGENERATION.md  API_guard.md  INSTRUKCJA_STABILNOSCI_SLA.md
.agent/rules/dodatkowe/: INSTRUKCJA_STABILNOSCI_SLA.md  ZECER.md  instrukcja_ANIA.md  instrukcja_ARCHITECT.md  instrukcja_DUCKDB.md  instrukcja_RESEARCHER.md  instrukcja_SHIELD.md  instrukcja_gemini_API.md  instrukcja_gemini_API_part2.md
.agent/skills/: LACHMAN_PROTOCOL_ENFORCEMENT.md  mcpservers.md  qdrantmcp.md
.agent/workflows/: CM_commit.md  IS_instrukcja_systemowa.md  NS_session.md  OO_triada_audytowa.md  QW_admin.md  QW_architect.md  QW_audit.md  QW_coder.md  QW_diffaudit.md  QW_milestone.md  SV_save.md
.anti_degradation/snapshots/: baseline-20260522_200122.json  post-path-normalization-fix.json  pre-path-normalization-fix.json  pre-qdrant-list-collections.json
.context/: _SESSION_SUPPLEMENT.md
.decision_log/: decision_log.parquet
.recipes/: RB-001-qdrant-fixes.md
tests/: test_integration_flow.py  test_list_symbols.py  test_optimize_indexing.py  test_path_normalization.py  test_qdrant_fixes.py  test_qdrant_list_collections.py  test_reconstruct_symbol.py  test_search_filter.py
