[project]
name = "qdrant-universal-mcp"
version = "0.1.0"
description = "Universal Qdrant MCP server with automatic vector dimension adjustment and OpenAI-compatible embedding support."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Pawel Lachman", email = "neco.001@gmail.com" }
]
keywords = ["mcp", "qdrant", "vector-database", "embeddings", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=0.4.1",
    "requests>=2.31.0",
    "openai>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["qdrant_universal.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
